--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Valentine at HKIIT</title>
+    <title>Unity WebGL Player | Valentine at HKIIT</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -64,7 +64,7 @@
         codeUrl: buildUrl + "/Valentine_Game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "HKIIT at IVE(LWL)",
-        productName: "CNY Firecracker Wish!",
+        productName: "Valentine at HKIIT",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
